# tomato

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
.omo/run-continuation/: ses_10c386675ffes9e1n59K9V369n.json  ses_10c509de1ffePlan84qnasoIxq.json
src/: daily_task_data.cpp  daily_task_widget.cpp  daily_task_widget.h  lang.cpp  lang.h  main.cpp  mainwindow.cpp  mainwindow.h  notedata.cpp  notedata.h  notewidget.cpp  pomodoro.cpp  pomodoro.h  pomodoro_widget.cpp  pomodoro_widget.h  taskdata.cpp  taskdata.h  taskwidget.cpp  taskwidget.h  theme.h
src/core/: lang.cpp  lang.h  pomodoro.cpp  pomodoro.h
src/data/: daily_task_data.cpp  daily_task_data.h  taskdata.cpp  taskdata.h
src/widgets/: daily_task_widget.cpp  daily_task_widget.h  mainwindow.cpp  mainwindow.h  notewidget.cpp  notewidget.h  pomodoro_widget.cpp  pomodoro_widget.h  taskwidget.cpp  taskwidget.h
